Fixed navbar footer faq alignments as per design

--- a/components/navHome/topnav/topnav.scss
+++ b/components/navHome/topnav/topnav.scss
@@ -1,7 +1,8 @@
 .topnavbar{
     width: 100%;
-    height: 2rem;
+    height: 2.18vw;
     background-color: #FFC36E;
     top: 0;
-    font-size: x-small;
+    font-size: 0.75rem;
+    font-weight: 500;
 }
